--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import url("~simpledotcss/simple.min.css");
+
+.highlight {
+  padding: 10px;
+  background-color: #f5f7ff;
+  border-radius: 4px;
+  border: solid 1px #d8dae1;
+}
